# openapi-forge-rust

./: README.md  config.json  package-lock.json  package.json  postProcess.js  postProcessRenameFiles.js  testGenerators.js
.github/workflows/: test.yml
helpers/: createHeaderParamsSnippet.js  createQueryStringSnippet.js  getOptionalLen.js  getSome.js  headerParametersExist.js  safeTypeConvert.js  setPathParameters.js  toAllCapital.js  toRustParamName.js  typeConvert.js  urlPath.js
partials/: model.handlebars
template/: Cargo.toml.handlebars  README.md
template/src/: config.rs.handlebars  lib.rs.handlebars  main.rs.handlebars  model.rs.handlebars  response.rs.handlebars
template/src/api_client/: api_client.rs.handlebars  mod.rs.handlebars
tests/feature-tests/: .gitignore  Cargo.toml  internal_schema_test.json  schema.json
tests/feature-tests/.cargo/: config.toml
tests/feature-tests/tests/: api.rs  bdd.rs  data.rs  ffi.rs  mock.rs  spec.rs  test.rs  util.rs
tests/feature-tests/tests/data/: mod.rs
tests/feature-tests/tests/features/: configuration.feature
tests/feature-tests/tests/ffi/: call.rs  dispatch.rs  mod.rs
tests/feature-tests/tests/mock/: mod.rs
tests/feature-tests/tests/spec/: given.rs  mod.rs  then.rs  when.rs
tests/feature-tests/tests/util/: mod.rs
