[package]
name = "forge-feature-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1.0"
cucumber = "0.19"
tokio = { version = "1.27", features = ["full"] }
libloading = "0.8"
mockito = "1.0"
convert_case = "0.6"
abi_stable = "0.11"
http = "0.2"

[[test]]
name = "test"
harness = false