[package]
name = "forge-feature-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1.0"
cucumber = "0.19"
tokio = { version = "1.27", features = ["full"] }
libloading = "0.8"
convert_case = "0.6"
abi_stable = "0.11"
wiremock = "0.5"
once_cell = "1.17"
url = "2.3"
serde_json = "1.0"

[[test]]
name = "test"
harness = false